Made changes to summaries, skills, and intro animation

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Malaz Naquib</h1>
-      <p>Your Next <span class="typed" data-typed-items="Full-Stack Engineer, Software Developer, Software Project Manager, Video Game Modder"></span></p>
+      <p>Your Next <span class="typed" data-typed-items="Software Engineer, Software Project Manager, Video Game Modder"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -82,9 +82,9 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p class="aboutDesc">I'm an experienced Full-Stack Engineer based out of Seattle who is incredibly passionate about working on software projects that challenge me beyond the limits of what I thought I could accomplish prior. I find the process of collaborating and learning new skills/tools to improve and build upon projects an immensely satisfying, fulfilling experience. 
+          <p class="aboutDesc">I am an incredibly passionate, experienced Software Engineer based out of Seattle, Washington. Currently, I'm performing full-stack development at 100Devs. With a proven track record of building 200+ websites, CRMs, and CMAs for the top 1% of international real estate teams, I'm always looking forward to working on software projects that showcase my skills while providing deep learning experiences. I find the process of collaborating and learning new skills/tools to improve and build upon software projects an immensely satisfying, fulfilling experience. 
             
-          <p class="aboutDesc">Throughout the COVID-19 pandemic, I worked as a healthcare giver and housing case manager. Recently, I worked as a Software Project Manager for Brivity, a real estate software company, and have now fully shifted back into my passion, software engineering. Currently, I am seeking to bring my skills to an innovative tech company with global reach.</p>
+          <p class="aboutDesc">Throughout the COVID-19 pandemic, I worked as a healthcare giver and housing case manager; providing me insight into the importance of software in my role throughout the pandemic. Recently, I worked as a Software Project Manager for Brivity, a real estate software company building software for the top 1% of international real estate teams. As of now, I have fully shifted back into my life-long passion, software engineering. Currently, I am seeking to bring my skills to an innovative tech company with global reach.</p>
 
           <p>On a more personal level, I have always been interested in software and tech from a young age, as many children growing up in the 2000s were. However, the "why" and "how" aspects of the tech I interacted with intrigued me the most. Eventually, this led to my first attempt at modifying a video game, Half-Life, at the age of 6. In all my wisdom, I utterly destroyed those poor files and was bewildered when it would crash on startup... Luckily, I have learned a lot since that first modification and am now working on several modding projects across multiple Bethesda franchises such as The Elder Scrolls and the Fallout series!</p>
         </div>
@@ -94,7 +94,7 @@
             <img src="assets/img/main/malaz-profile.PNG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Full-Stack Engineer by day ☼</h3>
+            <h3>Software Engineer by day ☼</h3>
             <h3>Video game modder by night ☾</h3>
             <div class="row">
               <div class="col-lg-6">
@@ -106,7 +106,7 @@
               </div>
             </div>
             <p>
-            With my recent position as a Software Project Manager at Brivity, I'm very experienced in taking the initiative to not only achieve the standards presented by my company, coworkers, and clients but to exceed them to deliver exemplary, error-free web projects and products while also creating an uplifting, supportive work environment.
+            With my recent position as a Software Project Manager at Brivity, I'm experienced in leading engineering teams to deliver exemplary, error-free web projects and products while also creating an uplifting, supportive work environment.
             </p>
           </div>
         </div>
@@ -204,7 +204,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">• Node <i class="val"></i></span>  
+              <span class="skill">• Node.js <i class="val"></i></span>  
             </div>
 
             <div class="progress">
@@ -216,23 +216,19 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">• Docker <i class="val"></i></span>
+              <span class="skill">• MongoDB <i class="val"></i></span>
             </div>
 
             <div class="progress">
-              <span class="skill">• MongoDB <i class="val"></i></span> 
+              <span class="skill">• Express <i class="val"></i></span> 
             </div>
 
             <div class="progress">
-              <span class="skill">• DevOps <i class="val"></i></span>
+              <span class="skill">• REST APIs <i class="val"></i></span>
             </div>
 
             <div class="progress">
-              <span class="skill">• Agile - Scrum <i class="val"></i></span>
-            </div>
-
-            <div class="progress">
-              <span class="skill">• OOP <i class="val"></i></span>
+              <span class="skill">• Object Oriented Programming <i class="val"></i></span>
             </div>
 
             <div class="progress">
@@ -249,6 +245,10 @@
 
             <div class="progress">
               <span class="skill">• Windows, Linux, OS X <i class="val"></i></span>
+            </div>
+
+            <div class="progress">
+              <span class="skill">• Agile - Scrum <i class="val"></i></span>
             </div>
 
           </div>
