Made changes to location accuracy

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>425.299.8244</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>malaz.naquib1@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>Bellingham, WA, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>Seattle, WA, USA</span></li>
                 </ul>
               </div>
             </div>
@@ -459,7 +459,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Remote / Bellingham, WA</p>
+                <p>Remote / Seattle, WA</p>
               </div>
 
               <div class="email">
@@ -474,7 +474,7 @@
                 <p>425.299.8244</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d84180.06317034813!2d-122.51589831787109!3d48.75082204980508!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5485962ef2458717%3A0xd57a9ca9cd39e0f0!2sBellingham%2C%20WA!5e0!3m2!1sen!2sus!4v1684200780812!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d172139.13549084685!2d-122.3420645!3d47.613028449999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5490102c93e83355%3A0x102565466944d59a!2sSeattle%2C%20WA!5e0!3m2!1sen!2sus!4v1689203979707!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
             </div>
 
