Updated Resume file

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Preview:</h3>
             <div class="resume-item pb-0">
-              <embed src="/Resume/Resume_Malaz_Naquib.pdf" width="500px" height="1200px" class="resume-img" />
+              <embed src="/Resume/Resume_Malaz_Naquib.pdf" width="100%" height="50vw" class="resume-img" />
             </div>
 
       </div>
